# kcd

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  GEMINI.md  README.md  SECURITY.md  codecov.yml  coverage.json  docker-compose.yml  patch.diff  patch_args.diff  patch_file.diff  patch_file2.diff  patch_obfuscate.py  script.py  script2.py  script3.py  script4.py  script5.py  script6.py  test_coverage.patch
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
benches/: bench.rs  bench_apply.rs  bench_apply_groups.rs  bench_inspect.rs  benchmark.rs  models_bench.rs
scripts/: install.ps1  install.sh  pre-commit.sh
src/: apply.rs  args.rs  clean.rs  cli.rs  client.rs  inspect.rs  lib.rs  main.rs  main.rs.orig  models.rs  plan.rs  rotate_keys.rs  utils.rs  validate.rs
src/apply/: actions.rs  clients.rs  components.rs  flows.rs  generic.rs  groups.rs  idps.rs  mod.rs  realm.rs  roles.rs  scopes.rs  test_utils.rs  users.rs
src/cli/: client.rs  group.rs  idp.rs  keys.rs  mod.rs  role.rs  user.rs
src/plan/: actions.rs  clients.rs  components.rs  flows.rs  (+8 more)
tests/: apply_test.rs  cli_interactive_test.rs  client_error_test.rs  client_test.rs  coverage_improvement_test.rs  coverage_test.rs  inspect_test.rs  io_benchmark.rs  lib_test.rs  main_test.rs  models_coverage_test.rs  models_debug_test.rs  plan_components_test.rs  plan_coverage_test.rs  plan_extended_test.rs  plan_test.rs  profile_test.rs  real_integration_test.rs  run_app_test.rs  security_verify.rs  ui_coverage_test.rs  ultimate_coverage_test.rs  validate_test.rs
tests_tarpaulin/: mod.rs
(+7 files in other folders)
