[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
clap = { version = "4.5.60", features = ["derive", "env"] }
dotenvy = "0.15.7"
env_logger = "0.11.9"
log = "0.4.29"
reqwest = { version = "0.12", features = ["json"] }
sanitize-filename = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
tokio = { version = "1.49.0", features = ["full"] }
similar = "2.7.0"
console = "0.15.10"

[dev-dependencies]
tempfile = "3.26.0"
